bundle/manifests/metrics-siteconfig-open-cluster-management-io_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: siteconfig-metrics-server-cert
  creationTimestamp: null
  name: metrics-siteconfig-open-cluster-management-io
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    control-plane: siteconfig-controller-manager
status:
  loadBalancer: {}
