bundle/manifests/webhook-clusterinstances-siteconfig-open-cluster-management-io_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: siteconfig-webhook-server-cert
  creationTimestamp: null
  name: webhook-clusterinstances-siteconfig-open-cluster-management-io
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    control-plane: siteconfig-controller-manager
status:
  loadBalancer: {}
