bundle/manifests/siteconfig-controller-manager_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: siteconfig
    app.kubernetes.io/name: siteconfig-controller
    control-plane: siteconfig-controller-manager
  name: siteconfig-controller-manager
spec:
  egress:
  - ports:
    - port: 5353
      protocol: UDP
    - port: 5353
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
  - ports:
    - port: 6443
      protocol: TCP
    to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          component: apiserver
  - ports:
    - port: 6443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
    - ipBlock:
        cidr: ::/0
  - ports:
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 169.254.169.254/32
    - ipBlock:
        cidr: ::/0
        except:
        - fd00:ec2::254/128
  ingress:
  - from:
    - podSelector: {}
  - ports:
    - port: 9443
      protocol: TCP
  - ports:
    - port: 8081
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: monitoring
    ports:
    - port: 8443
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: siteconfig
      app.kubernetes.io/name: siteconfig-controller
      control-plane: siteconfig-controller-manager
  policyTypes:
  - Ingress
  - Egress
